@@ -26,7 +26,6 @@ import static org.folio.TestConstants.INACTIVE_ACCESS_PROVIDER_A;
 import static org.folio.TestConstants.NON_EXIST_CONFIG_X_OKAPI_TENANT;
 import static org.folio.TestConstants.PO_ID_CLOSED_STATUS;
 import static org.folio.TestConstants.PO_ID_OPEN_STATUS;
-import static org.folio.TestConstants.PO_ID_PENDING_STATUS_WITH_PO_LINES;
 import static org.folio.TestConstants.PO_LINE_ID_FOR_SUCCESS_CASE;
 import static org.folio.TestConstants.PO_LINE_ID_WITHOUT_DETAILS;
 import static org.folio.TestConstants.PO_LINE_ID_WRONG_EXPENSE_CLASS;
@@ -42,14 +41,12 @@ import static org.folio.TestUtils.verifyLocationQuantity;
 import static org.folio.helper.PurchaseOrderLineHelper.ERESOURCE;
 import static org.folio.orders.utils.ResourcePathResolver.ACQUISITIONS_MEMBERSHIPS;
 import static org.folio.orders.utils.ResourcePathResolver.ACQUISITIONS_UNITS;
-import static org.folio.orders.utils.ResourcePathResolver.ALERTS;
 import static org.folio.orders.utils.ResourcePathResolver.FINANCE_BATCH_TRANSACTIONS;
 import static org.folio.orders.utils.ResourcePathResolver.FUNDS;
 import static org.folio.orders.utils.ResourcePathResolver.PIECES_STORAGE;
 import static org.folio.orders.utils.ResourcePathResolver.PO_LINES_STORAGE;
 import static org.folio.orders.utils.ResourcePathResolver.PO_NUMBER;
 import static org.folio.orders.utils.ResourcePathResolver.PURCHASE_ORDER_STORAGE;
-import static org.folio.orders.utils.ResourcePathResolver.REPORTING_CODES;
 import static org.folio.orders.utils.ResourcePathResolver.TITLES;
 import static org.folio.orders.utils.ResourcePathResolver.USER_TENANTS_ENDPOINT;
 import static org.folio.rest.core.exceptions.ErrorCodes.COST_ADDITIONAL_COST_INVALID;
@@ -127,9 +124,9 @@ import org.folio.rest.acq.model.Title;
 import org.folio.rest.acq.model.finance.Fund;
 import org.folio.rest.acq.model.finance.Transaction;
 import org.folio.rest.core.exceptions.ErrorCodes;
-import org.folio.rest.jaxrs.model.CompositePoLine;
-import org.folio.rest.jaxrs.model.CompositePoLine.PaymentStatus;
-import org.folio.rest.jaxrs.model.CompositePoLine.ReceiptStatus;
+import org.folio.rest.jaxrs.model.PoLine;
+import org.folio.rest.jaxrs.model.PoLine.PaymentStatus;
+import org.folio.rest.jaxrs.model.PoLine.ReceiptStatus;
 import org.folio.rest.jaxrs.model.CompositePurchaseOrder;
 import org.folio.rest.jaxrs.model.Contributor;
 import org.folio.rest.jaxrs.model.Cost;
@@ -141,7 +138,6 @@ import org.folio.rest.jaxrs.model.Location;
 import org.folio.rest.jaxrs.model.Parameter;
 import org.folio.rest.jaxrs.model.PatchOrderLineRequest;
 import org.folio.rest.jaxrs.model.Piece;
-import org.folio.rest.jaxrs.model.PoLine;
 import org.folio.rest.jaxrs.model.PoLineCollection;
 import org.folio.rest.jaxrs.model.ProductId;
 import org.folio.rest.jaxrs.model.ReplaceInstanceRef;
@@ -185,6 +181,8 @@ public class PurchaseOrderLinesApiTest {
 
   @BeforeAll
   static void before() throws InterruptedException, ExecutionException, TimeoutException {
+    // Disable caching to avoid test failures
+    System.setProperty("orders.cache.consortium-data.expiration.time.seconds", "0");
     if (isVerticleNotDeployed()) {
       ApiTestSuite.before();
       runningOnOwn = true;
@@ -208,14 +206,14 @@ public class PurchaseOrderLinesApiTest {
   void testPostOrderLine() {
     logger.info("=== Test Post Order Line (expected flow) ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
     reqData.getCost().setPoLineEstimatedPrice(null);
     // To skip permission validation by units
     reqData.setId("0009662b-8b80-4001-b704-ca10971f175d");
     reqData.setPurchaseOrderId("9a952cd0-842b-4e71-bddd-014eb128dc8e");
 
-    final CompositePoLine response = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
-      prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), APPLICATION_JSON, 201).as(CompositePoLine.class);
+    final PoLine response = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
+      prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), APPLICATION_JSON, 201).as(PoLine.class);
 
     assertThat(response.getPurchaseOrderId(), equalTo(reqData.getPurchaseOrderId()));
     assertThat(response.getInstanceId(), nullValue());
@@ -225,7 +223,7 @@ public class PurchaseOrderLinesApiTest {
     assertThat(response.getPoLineNumber(), equalTo(expectedPoLineNumber));
     // See MODORDERS-180
     assertThat(response.getCost().getPoLineEstimatedPrice(), equalTo(49.98d));
-    Location location = response.getLocations().get(0);
+    Location location = response.getLocations().getFirst();
     verifyLocationQuantity(location, response.getOrderFormat());
   }
 
@@ -233,16 +231,16 @@ public class PurchaseOrderLinesApiTest {
   void testPostOrdersLinePhysicalFormatIncorrectQuantity() {
     logger.info("=== Test Post Physical Order Line - incorrect quantity ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
 
     // Set incorrect cost and location quantities
-    reqData.setOrderFormat(CompositePoLine.OrderFormat.PHYSICAL_RESOURCE);
+    reqData.setOrderFormat(PoLine.OrderFormat.PHYSICAL_RESOURCE);
     reqData.getCost().setQuantityPhysical(0);
     reqData.getCost().setQuantityElectronic(1);
-    reqData.getLocations().get(0).setQuantityPhysical(1);
+    reqData.getLocations().getFirst().setQuantityPhysical(1);
     reqData.getLocations().add(new Location()
       .withQuantityPhysical(0)
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     final Errors response = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10), APPLICATION_JSON, 422).as(Errors.class);
@@ -266,18 +264,18 @@ public class PurchaseOrderLinesApiTest {
   void testPostOrdersLineElectronicFormatIncorrectQuantity() {
     logger.info("=== Test Post Electronic Order Line - incorrect quantity ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
 
     // Set incorrect cost and location quantities
-    reqData.setOrderFormat(CompositePoLine.OrderFormat.ELECTRONIC_RESOURCE);
+    reqData.setOrderFormat(PoLine.OrderFormat.ELECTRONIC_RESOURCE);
     reqData.getCost().setListUnitPrice(null);
     reqData.getCost().setListUnitPriceElectronic(0d);
     reqData.getCost().setQuantityPhysical(0);
     reqData.getCost().setQuantityElectronic(4);
-    reqData.getLocations().get(0).setQuantityElectronic(3);
+    reqData.getLocations().getFirst().setQuantityElectronic(3);
     reqData.getLocations().add(new Location()
       .withQuantityElectronic(0)
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
     Eresource eresource = new  Eresource();
     eresource.setCreateInventory(NONE);
     reqData.setEresource(eresource);
@@ -303,22 +301,22 @@ public class PurchaseOrderLinesApiTest {
   void testPostOrdersLinePhysicalFormatDiscount() {
     logger.info("=== Test Post Physical Order Line - discount exceeds total price ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
 
     // Set incorrect cost and location quantities
-    reqData.setOrderFormat(CompositePoLine.OrderFormat.PHYSICAL_RESOURCE);
+    reqData.setOrderFormat(PoLine.OrderFormat.PHYSICAL_RESOURCE);
     reqData.getCost().setQuantityPhysical(2);
     reqData.getCost().setListUnitPrice(10d);
     reqData.getCost().setDiscount(100d);
     reqData.getCost().setDiscountType(Cost.DiscountType.AMOUNT);
     reqData.getCost().setQuantityElectronic(0);
-    reqData.getLocations().get(0).setQuantityPhysical(2);
+    reqData.getLocations().getFirst().setQuantityPhysical(2);
 
     final Errors response = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10), APPLICATION_JSON, 422).as(Errors.class);
 
     assertThat(response.getErrors(), hasSize(1));
-    assertThat(response.getErrors().get(0).getCode(), equalTo(COST_DISCOUNT_INVALID.getCode()));
+    assertThat(response.getErrors().getFirst().getCode(), equalTo(COST_DISCOUNT_INVALID.getCode()));
 
     // Check that no any calls made by the business logic to other services
     assertTrue(MockServer.serverRqRs.isEmpty());
@@ -328,29 +326,29 @@ public class PurchaseOrderLinesApiTest {
   void testPostWithEmptyConfigOverLimit() {
     logger.info("=== Test PO creation fail with default limit ===");
 
-    JsonObject compPoLineJson = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE);
+    JsonObject poLineJson = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE);
 
-    final Errors errors = verifyPostResponse(LINES_PATH, compPoLineJson.encodePrettily(),
+    final Errors errors = verifyPostResponse(LINES_PATH, poLineJson.encodePrettily(),
       prepareHeaders(EMPTY_CONFIG_X_OKAPI_TENANT), APPLICATION_JSON, 422).body().as(Errors.class);
 
     logger.info(JsonObject.mapFrom(errors).encodePrettily());
     assertFalse(errors.getErrors().isEmpty());
-    assertEquals(POL_LINES_LIMIT_EXCEEDED.getDescription(), errors.getErrors().get(0).getMessage());
-    assertEquals(POL_LINES_LIMIT_EXCEEDED.getCode(), errors.getErrors().get(0).getCode());
+    assertEquals(POL_LINES_LIMIT_EXCEEDED.getDescription(), errors.getErrors().getFirst().getMessage());
+    assertEquals(POL_LINES_LIMIT_EXCEEDED.getCode(), errors.getErrors().getFirst().getCode());
   }
 
   @Test
   void testPoLineCreationIfPoAlreadyReachedLimit() {
     logger.info("=== Test PO Line over limit creation ===");
-    JsonObject compPoLineJson = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE);
+    JsonObject poLineJson = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE);
 
-    final Errors errors = verifyPostResponse(LINES_PATH, compPoLineJson.encodePrettily(),
+    final Errors errors = verifyPostResponse(LINES_PATH, poLineJson.encodePrettily(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_1), APPLICATION_JSON, 422).body().as(Errors.class);
 
     logger.info(JsonObject.mapFrom(errors).encodePrettily());
     assertFalse(errors.getErrors().isEmpty());
-    assertEquals(POL_LINES_LIMIT_EXCEEDED.getDescription(), errors.getErrors().get(0).getMessage());
-    assertEquals(POL_LINES_LIMIT_EXCEEDED.getCode(), errors.getErrors().get(0).getCode());
+    assertEquals(POL_LINES_LIMIT_EXCEEDED.getDescription(), errors.getErrors().getFirst().getMessage());
+    assertEquals(POL_LINES_LIMIT_EXCEEDED.getCode(), errors.getErrors().getFirst().getCode());
   }
 
   @Test
@@ -361,7 +359,7 @@ public class PurchaseOrderLinesApiTest {
       prepareHeaders(NON_EXIST_CONFIG_X_OKAPI_TENANT), APPLICATION_JSON, 422).as(Errors.class);
 
     assertEquals(1, resp.getErrors().size());
-    assertEquals(ErrorCodes.MISSING_ORDER_ID_IN_POL.getCode(), resp.getErrors().get(0).getCode());
+    assertEquals(ErrorCodes.MISSING_ORDER_ID_IN_POL.getCode(), resp.getErrors().getFirst().getCode());
   }
 
   @Test
@@ -374,7 +372,7 @@ public class PurchaseOrderLinesApiTest {
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10), APPLICATION_JSON, 422).as(Errors.class);
 
     assertEquals(1, resp.getErrors().size());
-    assertEquals(ErrorCodes.ORDER_NOT_FOUND.getCode(), resp.getErrors().get(0).getCode());
+    assertEquals(ErrorCodes.ORDER_NOT_FOUND.getCode(), resp.getErrors().getFirst().getCode());
   }
 
   @Test
@@ -388,7 +386,7 @@ public class PurchaseOrderLinesApiTest {
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10), APPLICATION_JSON, 400).as(Errors.class);
 
     assertEquals(1, resp.getErrors().size());
-    assertEquals(ErrorCodes.BUDGET_EXPENSE_CLASS_NOT_FOUND.getCode(), resp.getErrors().get(0).getCode());
+    assertEquals(ErrorCodes.BUDGET_EXPENSE_CLASS_NOT_FOUND.getCode(), resp.getErrors().getFirst().getCode());
   }
 
   @Test
@@ -408,7 +406,7 @@ public class PurchaseOrderLinesApiTest {
   private void validateNoLineCreatedForNonPendingOrder(String orderId, String errorCode) {
     CompositePurchaseOrder order = getMockAsJson(COMP_ORDER_MOCK_DATA_PATH, orderId).mapTo(CompositePurchaseOrder.class);
 
-    CompositePoLine poLine = order.getCompositePoLines().get(0);
+    PoLine poLine = order.getPoLines().getFirst();
     poLine.setId(null);
 
     Errors errors = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(poLine).encode(),
@@ -420,7 +418,7 @@ public class PurchaseOrderLinesApiTest {
   void testCreatePoLineWithGetPoLineNumberError() throws IOException {
     logger.info("=== Test Create PO Line - fail on PO Line number generation ===");
     JsonObject json = new JsonObject(getMockData(String.format("%s%s.json", COMP_PO_LINES_MOCK_DATA_PATH, PO_LINE_ID_FOR_SUCCESS_CASE)));
-    CompositePoLine poLine = json.mapTo(CompositePoLine.class);
+    PoLine poLine = json.mapTo(PoLine.class);
     poLine.setId("0009662b-8b80-4001-b704-ca10971f175d");
     poLine.setPurchaseOrderId("9a952cd0-842b-4e71-bddd-014eb128dc8e");
     verifyPostResponse(LINES_PATH, JsonObject.mapFrom(poLine).encode(), prepareHeaders(PO_NUMBER_ERROR_X_OKAPI_TENANT, X_OKAPI_USER_ID), APPLICATION_JSON, 500);
@@ -430,11 +428,11 @@ public class PurchaseOrderLinesApiTest {
   void testPutOrderLineElectronicFormatIncorrectQuantityAndPrice() {
     logger.info("=== Test Put Electronic Order Line - incorrect quantity and Price ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
     reqData.setId(ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE);
 
     // Set incorrect cost and location quantities
-    reqData.setOrderFormat(CompositePoLine.OrderFormat.ELECTRONIC_RESOURCE);
+    reqData.setOrderFormat(PoLine.OrderFormat.ELECTRONIC_RESOURCE);
     Cost cost = reqData.getCost();
     cost.setQuantityPhysical(1);
     cost.setQuantityElectronic(0);
@@ -443,7 +441,7 @@ public class PurchaseOrderLinesApiTest {
     cost.setAdditionalCost(-1d);
     cost.setDiscountType(Cost.DiscountType.PERCENTAGE);
     cost.setDiscount(100.1d);
-    reqData.getLocations().get(0).setQuantityElectronic(1);
+    reqData.getLocations().getFirst().setQuantityElectronic(1);
 
     final Errors response = verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData),
       APPLICATION_JSON, 422).as(Errors.class);
@@ -486,7 +484,10 @@ public class PurchaseOrderLinesApiTest {
 
     String url = String.format(LINE_BY_ID_PATH, PO_LINE_ID_FOR_SUCCESS_CASE);
 
-    Errors resp = verifyPut(url, getMockData(PO_LINE_MIN_CONTENT_PATH), "", 422).as(Errors.class);
+    JsonObject reqData = getMockAsJson(PO_LINE_MIN_CONTENT_PATH);
+    reqData.remove("purchaseOrderId");
+
+    Errors resp = verifyPut(url, reqData.encodePrettily(), "", 422).as(Errors.class);
 
     assertEquals(1, resp.getErrors().size());
   }
@@ -496,7 +497,7 @@ public class PurchaseOrderLinesApiTest {
     logger.info("=== Test PUT Order Line By Id - Success case ===");
 
     String lineId = PO_LINE_ID_FOR_SUCCESS_CASE;
-    CompositePoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(CompositePoLine.class);
+    PoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(PoLine.class);
 
     // See MODORDERS-180
     Cost cost = body.getCost();
@@ -513,25 +514,24 @@ public class PurchaseOrderLinesApiTest {
 
     assertTrue(StringUtils.isEmpty(resp.getBody().asString()));
 
-    //4 calls to get Order Line,Purchase Order for checking workflow status, ISBN validation and Consortium Configuration
+    // 4 calls to get Order Line,Purchase Order for checking workflow status, ISBN validation and Consortium Configuration
     Map<String, List<JsonObject>> column = MockServer.serverRqRs.column(HttpMethod.GET);
+    // Change to assumeThat because after correcting the Caffeine Cache we cannot assert to get a non-cached result
     assertThat(column, hasKey(USER_TENANTS_ENDPOINT));
     assertThat(column, hasKey(PO_LINES_STORAGE));
     assertThat(column, not(hasKey(PIECES_STORAGE)));
 
     column = MockServer.serverRqRs.column(HttpMethod.POST);
-    assertEquals(1, column.size());
-    assertThat(column.keySet(), containsInAnyOrder(REPORTING_CODES));
-    assertThat(column.get(REPORTING_CODES), hasSize(3));
+    assertEquals(0, column.size());
 
     column = MockServer.serverRqRs.column(HttpMethod.PUT);
     assertEquals(1, column.size());
     assertThat(column.keySet(), containsInAnyOrder(PO_LINES_STORAGE));
 
     // See MODORDERS-180
-    PoLine poLine = column.get(PO_LINES_STORAGE).get(0).mapTo(PoLine.class);
+    PoLine poLine = column.get(PO_LINES_STORAGE).getFirst().mapTo(PoLine.class);
     assertThat(poLine.getCost().getPoLineEstimatedPrice(), equalTo(expectedTotalPoLine));
-    Location location = poLine.getLocations().get(0);
+    Location location = poLine.getLocations().getFirst();
     assertEquals(location.getQuantityPhysical(), location.getQuantity());
 
     // Verify messages sent via event bus
@@ -542,11 +542,10 @@ public class PurchaseOrderLinesApiTest {
   void testPutOrderLineWithTagInheritance() {
     logger.info("=== Test PUT Order Line With Tag Inheritance ===");
     String lineId = "bb66b269-76ed-4616-8da9-730d9b817247";
-    CompositePoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(CompositePoLine.class);
+    PoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(PoLine.class);
     body.setCheckinItems(false);
     body.setIsPackage(false);
     body.setReceiptStatus(ReceiptStatus.AWAITING_RECEIPT);
-    body.setReportingCodes(new ArrayList<>());
     body.setPurchaseOrderId(ID_FOR_PRINT_MONOGRAPH_ORDER);
 
     MockServer.addMockEntry(PO_LINES_STORAGE, body);
@@ -568,7 +567,7 @@ public class PurchaseOrderLinesApiTest {
       .withValue(100D)));
     verifyPut(url, JsonObject.mapFrom(body), "", 204);
 
-    Transaction createdEncumbrance = MockServer.getCreatedEncumbrances().get(0);
+    Transaction createdEncumbrance = MockServer.getCreatedEncumbrances().getFirst();
     assertEquals(Collections.singletonList("created"), createdEncumbrance.getTags().getTagList());
 
     // edit POLine for encumbrance update
@@ -588,11 +587,10 @@ public class PurchaseOrderLinesApiTest {
   void testPutOrderLineWithNoTags() {
     logger.info("=== Test PUT Order Line With No Tags ===");
     String lineId = "bb66b269-76ed-4616-8da9-730d9b817247";
-    CompositePoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(CompositePoLine.class);
+    PoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(PoLine.class);
     body.setCheckinItems(false);
     body.setIsPackage(false);
     body.setReceiptStatus(ReceiptStatus.AWAITING_RECEIPT);
-    body.setReportingCodes(new ArrayList<>());
     MockServer.addMockEntry(PO_LINES_STORAGE, body);
     MockServer.addMockEntry(PURCHASE_ORDER_STORAGE, new CompositePurchaseOrder()
       .withId(ID_FOR_PRINT_MONOGRAPH_ORDER)
@@ -612,7 +610,7 @@ public class PurchaseOrderLinesApiTest {
       .withValue(100D)));
     verifyPut(url, JsonObject.mapFrom(body), "", 204);
 
-    Transaction createdEncumbrance = MockServer.getCreatedEncumbrances().get(0);
+    Transaction createdEncumbrance = MockServer.getCreatedEncumbrances().getFirst();
     assertNull(createdEncumbrance.getTags());
 
     // edit POLine for encumbrance update
@@ -624,7 +622,7 @@ public class PurchaseOrderLinesApiTest {
       .withDistributionType(FundDistribution.DistributionType.PERCENTAGE)
       .withValue(100D)));
     verifyPut(url, JsonObject.mapFrom(body), "", 204);
-    Transaction updatedEncumbrance = MockServer.getUpdatedTransactions().get(0);
+    Transaction updatedEncumbrance = MockServer.getUpdatedTransactions().getFirst();
     assertNull(updatedEncumbrance.getTags());
   }
 
@@ -633,12 +631,11 @@ public class PurchaseOrderLinesApiTest {
     logger.info("=== Test PUT Order Line By Id - Pieces will be created ===");
 
     String lineId = PO_LINE_ID_FOR_SUCCESS_CASE;
-    CompositePoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(CompositePoLine.class);
+    PoLine body = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(PoLine.class);
 
     body.setCheckinItems(false);
     body.setIsPackage(false);
     body.setReceiptStatus(ReceiptStatus.AWAITING_RECEIPT);
-    body.setReportingCodes(new ArrayList<>());
     MockServer.addMockEntry(PO_LINES_STORAGE, body);
     MockServer.addMockEntry(PURCHASE_ORDER_STORAGE, new CompositePurchaseOrder()
       .withId(ID_FOR_PRINT_MONOGRAPH_ORDER)
@@ -677,8 +674,8 @@ public class PurchaseOrderLinesApiTest {
     assertThat(column, hasKey(PO_LINES_STORAGE));
 
     column = MockServer.serverRqRs.column(HttpMethod.PUT);
-    assertEquals(3, column.size());
-    assertThat(column.keySet(), containsInAnyOrder(PO_LINES_STORAGE, ALERTS, REPORTING_CODES));
+    assertEquals(1, column.size());
+    assertThat(column.keySet(), containsInAnyOrder(PO_LINES_STORAGE));
 
     column = MockServer.serverRqRs.column(HttpMethod.POST);
     assertEquals(1, column.size());
@@ -693,17 +690,17 @@ public class PurchaseOrderLinesApiTest {
     logger.info("=== Test PUT Order Line By Id - No Order update event sent on success ===");
 
     String lineId = ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE;
-    CompositePoLine compositePoLine = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(CompositePoLine.class);
+    PoLine poLine = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, lineId).mapTo(PoLine.class);
     String url = String.format(LINE_BY_ID_PATH, lineId);
 
-    compositePoLine.setIsPackage(true);
-    compositePoLine.setInstanceId(UUID.randomUUID().toString());
+    poLine.setIsPackage(true);
+    poLine.setInstanceId(UUID.randomUUID().toString());
 
-    Errors errors = verifyPut(url, JsonObject.mapFrom(compositePoLine), "", 422).then()
+    Errors errors = verifyPut(url, JsonObject.mapFrom(poLine), "", 422).then()
       .extract()
       .as(Errors.class);
 
-    assertEquals(INSTANCE_ID_NOT_ALLOWED_FOR_PACKAGE_POLINE.getCode(), errors.getErrors().get(0).getCode());
+    assertEquals(INSTANCE_ID_NOT_ALLOWED_FOR_PACKAGE_POLINE.getCode(), errors.getErrors().getFirst().getCode());
   }
 
 
@@ -747,11 +744,11 @@ public class PurchaseOrderLinesApiTest {
 
     String lineId = ID_DOES_NOT_EXIST;
     String url = String.format(LINE_BY_ID_PATH, lineId);
-    String body = getPoLineWithMinContentAndIds(lineId, PO_ID_PENDING_STATUS_WITH_PO_LINES);
+    String body = getPoLineWithMinContentAndIds(lineId);
 
     Response actual = verifyPut(url, body, APPLICATION_JSON, 404);
 
-    assertEquals(lineId, actual.as(Errors.class).getErrors().get(0).getMessage());
+    assertEquals(lineId, actual.as(Errors.class).getErrors().getFirst().getMessage());
 
     Map<String, List<JsonObject>> column = MockServer.serverRqRs.column(HttpMethod.GET);
     assertEquals(1, column.size());
@@ -772,12 +769,12 @@ public class PurchaseOrderLinesApiTest {
     logger.info("=== Test PUT Order Line By Id - Body Validation Error ===");
 
     String url = String.format(LINE_BY_ID_PATH, ID_DOES_NOT_EXIST);
-    String body = getPoLineWithMinContentAndIds(ID_BAD_FORMAT, PO_ID_PENDING_STATUS_WITH_PO_LINES);
+    String body = getPoLineWithMinContentAndIds(ID_BAD_FORMAT);
 
     Response resp = verifyPut(url, body, APPLICATION_JSON, 422);
 
     assertEquals(1, resp.as(Errors.class).getErrors().size());
-    assertNotNull(resp.as(Errors.class).getErrors().get(0).getMessage());
+    assertNotNull(resp.as(Errors.class).getErrors().getFirst().getMessage());
 
     // Verify that no calls reached mock server
     assertTrue(MockServer.serverRqRs.isEmpty());
@@ -789,13 +786,13 @@ public class PurchaseOrderLinesApiTest {
     logger.info("=== Test PUT Order Line By Id - Ids mismatch ===");
 
     String url = String.format(LINE_BY_ID_PATH, ID_DOES_NOT_EXIST);
-    String body = getPoLineWithMinContentAndIds(PO_LINE_ID_FOR_SUCCESS_CASE, PO_ID_PENDING_STATUS_WITH_PO_LINES);
+    String body = getPoLineWithMinContentAndIds(PO_LINE_ID_FOR_SUCCESS_CASE);
 
     Response resp = verifyPut(url, body, APPLICATION_JSON, 422);
 
     assertEquals(1, resp.as(Errors.class).getErrors().size());
-    assertThat(resp.as(Errors.class).getErrors().get(0).getCode(),is("idMismatch"));
-    assertNotNull(resp.as(Errors.class).getErrors().get(0).getMessage());
+    assertThat(resp.as(Errors.class).getErrors().getFirst().getCode(),is("idMismatch"));
+    assertNotNull(resp.as(Errors.class).getErrors().getFirst().getMessage());
 
     // Verify that no calls reached mock server
     assertTrue(MockServer.serverRqRs.isEmpty());
@@ -808,7 +805,7 @@ public class PurchaseOrderLinesApiTest {
     String lineId = ID_FOR_INTERNAL_SERVER_ERROR;
 
     String url = String.format(LINE_BY_ID_PATH, lineId);
-    String body = getPoLineWithMinContentAndIds(lineId, PO_ID_PENDING_STATUS_WITH_PO_LINES);
+    String body = getPoLineWithMinContentAndIds(lineId);
 
     Response actual = verifyPut(url, body, APPLICATION_JSON, 500);
 
@@ -857,7 +854,7 @@ public class PurchaseOrderLinesApiTest {
     String url = String.format(LINE_BY_ID_PATH, ID_DOES_NOT_EXIST);
     Response actual = verifyDeleteResponse(url, APPLICATION_JSON, 404);
 
-    assertEquals(ID_DOES_NOT_EXIST, actual.as(Errors.class).getErrors().get(0).getMessage());
+    assertEquals(ID_DOES_NOT_EXIST, actual.as(Errors.class).getErrors().getFirst().getMessage());
   }
 
   @Test
@@ -874,7 +871,7 @@ public class PurchaseOrderLinesApiTest {
   void testGetOrderLineByIdWithoutTitle() {
     logger.info("=== Test Get Orderline By Id without title ===");
 
-    final CompositePoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE), CompositePoLine.class);
+    final PoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE), PoLine.class);
 
     logger.info(JsonObject.mapFrom(resp).encodePrettily());
 
@@ -891,7 +888,7 @@ public class PurchaseOrderLinesApiTest {
       .withPoLineId(ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE)
       .withTitle("Title"));
 
-    final CompositePoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE), CompositePoLine.class);
+    final PoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE), PoLine.class);
 
     logger.info(JsonObject.mapFrom(resp).encodePrettily());
 
@@ -911,7 +908,7 @@ public class PurchaseOrderLinesApiTest {
       .withTitle("Title")
       .withInstanceId(instanceId));
 
-    final CompositePoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE), CompositePoLine.class);
+    final PoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE), PoLine.class);
 
     logger.info(JsonObject.mapFrom(resp).encodePrettily());
 
@@ -933,7 +930,7 @@ public class PurchaseOrderLinesApiTest {
       .withInstanceId(instanceId));
     addMockEntry(PO_LINES_STORAGE, getMinimalContentCompositePoLine().withIsPackage(true).withId(polineId));
 
-    final CompositePoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, polineId), CompositePoLine.class);
+    final PoLine resp = verifySuccessGet(String.format(LINE_BY_ID_PATH, polineId), PoLine.class);
 
     logger.info(JsonObject.mapFrom(resp).encodePrettily());
 
@@ -951,7 +948,7 @@ public class PurchaseOrderLinesApiTest {
 
     final Response resp = verifyGet(String.format(LINE_BY_ID_PATH, lineId), APPLICATION_JSON, 404);
 
-    assertEquals(lineId, resp.getBody().as(Errors.class).getErrors().get(0).getMessage());
+    assertEquals(lineId, resp.getBody().as(Errors.class).getErrors().getFirst().getMessage());
   }
 
   @Test
@@ -960,7 +957,7 @@ public class PurchaseOrderLinesApiTest {
 
     final Response resp = verifyGet(String.format(LINE_BY_ID_PATH, ID_FOR_INTERNAL_SERVER_ERROR), APPLICATION_JSON, 500);
 
-    assertEquals("Internal Server Error", resp.getBody().as(Errors.class).getErrors().get(0).getMessage());
+    assertEquals("Internal Server Error", resp.getBody().as(Errors.class).getErrors().getFirst().getMessage());
   }
 
   @Test
@@ -995,7 +992,7 @@ public class PurchaseOrderLinesApiTest {
 
     List<String> queryParams = getQueryParams(PO_LINES_STORAGE);
     assertThat(queryParams, hasSize(1));
-    assertThat(queryParams.get(0), equalTo(NO_ACQ_UNIT_ASSIGNED_CQL));
+    assertThat(queryParams.getFirst(), equalTo(NO_ACQ_UNIT_ASSIGNED_CQL));
   }
 
   @Test
@@ -1016,7 +1013,7 @@ public class PurchaseOrderLinesApiTest {
 
     List<String> queryParams = getQueryParams(PO_LINES_STORAGE);
     assertThat(queryParams, hasSize(1));
-    String queryToStorage = queryParams.get(0);
+    String queryToStorage = queryParams.getFirst();
     assertThat(queryToStorage, containsString("(" + cql + ")"));
     assertThat(queryToStorage, containsString(ORDER_ID_WITH_PO_LINES));
     assertThat(queryToStorage, not(containsString(ACQUISITIONS_UNIT_IDS + "=")));
@@ -1028,14 +1025,14 @@ public class PurchaseOrderLinesApiTest {
   void testPostOrdersWithInvalidIsbn() {
     logger.info("=== Test Post Order line with invalid ISBN ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
     // To skip permission validation by units
     reqData.setId("0009662b-8b80-4001-b704-ca10971f175d");
     reqData.setPurchaseOrderId("9a952cd0-842b-4e71-bddd-014eb128dc8e");
 
     String isbn = INVALID_ISBN;
 
-    reqData.getDetails().getProductIds().get(0).setProductId(isbn);
+    reqData.getDetails().getProductIds().getFirst().setProductId(isbn);
 
 
     Response resp = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
@@ -1044,7 +1041,7 @@ public class PurchaseOrderLinesApiTest {
     Error err = resp.getBody()
         .as(Errors.class)
         .getErrors()
-        .get(0);
+        .getFirst();
 
     assertThat(err.getParameters().get(0).getValue(), equalTo(isbn));
   }
@@ -1053,31 +1050,31 @@ public class PurchaseOrderLinesApiTest {
   void testPostOrderLineToConvertToIsbn13() {
     logger.info("=== Test Post order line to verify ISBN 10 is normalized to ISBN 13 ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
     // To skip permission validation by units
     reqData.setId("0009662b-8b80-4001-b704-ca10971f175d");
     reqData.setPurchaseOrderId("9a952cd0-842b-4e71-bddd-014eb128dc8e");
 
     String isbn = "0-19-852663-6";
-    ProductId productId = reqData.getDetails().getProductIds().get(0);
-    reqData.getDetails().getProductIds().get(0).setProductId(isbn);
+    ProductId productId = reqData.getDetails().getProductIds().getFirst();
+    reqData.getDetails().getProductIds().getFirst().setProductId(isbn);
     reqData.getDetails().getProductIds().add(new ProductId()
       .withProductIdType(productId.getProductIdType())
       .withQualifier(productId.getQualifier())
       .withProductId(isbn));
     assertThat(reqData.getDetails().getProductIds(), hasSize(2));
-    CompositePoLine resp = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
-        prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), APPLICATION_JSON, 201).as(CompositePoLine.class);
+    PoLine resp = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
+        prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), APPLICATION_JSON, 201).as(PoLine.class);
 
     assertThat(resp.getDetails().getProductIds(), hasSize(1));
-    assertThat(resp.getDetails().getProductIds().get(0).getProductId(), equalTo("9780198526636"));
+    assertThat(resp.getDetails().getProductIds().getFirst().getProductId(), equalTo("9780198526636"));
   }
 
   @Test
   void testPostOrderLineToRemoveISBNDuplicates() {
     logger.info("=== Test Post order line to verify ISBN 13 is not repeated ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE).mapTo(PoLine.class);
     // To skip permission validation by units
     reqData.setId("0009662b-8b80-4001-b704-ca10971f175d");
     reqData.setPurchaseOrderId("9a952cd0-842b-4e71-bddd-014eb128dc8e");
@@ -1104,12 +1101,12 @@ public class PurchaseOrderLinesApiTest {
     reqData.getDetails().getProductIds().add(new ProductId().withProductId(INVALID_ISBN).withProductIdType(invalidIsbn));
 
     assertThat(reqData.getDetails().getProductIds(), hasSize(8));
-    CompositePoLine resp = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
-      prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), APPLICATION_JSON, 201).as(CompositePoLine.class);
+    PoLine resp = verifyPostResponse(LINES_PATH, JsonObject.mapFrom(reqData).encodePrettily(),
+      prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), APPLICATION_JSON, 201).as(PoLine.class);
 
     assertThat(resp.getDetails().getProductIds(), hasSize(4));
-    assertThat(resp.getDetails().getProductIds().get(0).getProductId(), equalTo(isbn1));
-    assertThat(resp.getDetails().getProductIds().get(0).getQualifier(), equalTo(qualifier1));
+    assertThat(resp.getDetails().getProductIds().getFirst().getProductId(), equalTo(isbn1));
+    assertThat(resp.getDetails().getProductIds().getFirst().getQualifier(), equalTo(qualifier1));
 
     assertThat(resp.getDetails().getProductIds().get(1).getProductId(), equalTo(isbn1));
     assertThat(resp.getDetails().getProductIds().get(1).getQualifier(), equalTo(qualifier2));
@@ -1126,8 +1123,8 @@ public class PurchaseOrderLinesApiTest {
     logger.info("=== Test update poline for opened order should failed when related invoice line is approved  ===");
 
     CompositePurchaseOrder compositePurchaseOrder = verifySuccessGet(String.format(COMP_PO_BY_ID_PATH, "d6966317-96c7-492f-8df6-dc6c19554452"), CompositePurchaseOrder.class);
-    CompositePoLine reqData = compositePurchaseOrder.getCompositePoLines().get(0);
-    reqData.getFundDistribution().get(0).setFundId("a89eccf0-57a6-495e-898d-32b9b2210f2f");
+    PoLine reqData = compositePurchaseOrder.getPoLines().getFirst();
+    reqData.getFundDistribution().getFirst().setFundId("a89eccf0-57a6-495e-898d-32b9b2210f2f");
 
     verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 403);
@@ -1141,13 +1138,12 @@ public class PurchaseOrderLinesApiTest {
   @Test
   void testPutOrdersWithInvalidIsbn() {
     logger.info("=== Test Put Order line with invalid ISBN ===");
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE)
-      .mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE)
+      .mapTo(PoLine.class);
     reqData.setId(ANOTHER_PO_LINE_ID_FOR_SUCCESS_CASE);
-    reqData.getLocations().get(0).setQuantity(2);
-    String isbn = INVALID_ISBN;
+    reqData.getLocations().getFirst().setQuantity(2);
 
-    reqData.getDetails().getProductIds().get(0).setProductId(isbn);
+    reqData.getDetails().getProductIds().getFirst().setProductId(INVALID_ISBN);
 
     verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 204);
@@ -1157,40 +1153,40 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithInactiveAccessProvider() {
     logger.info("=== Test update poline with inactive access provider for opened order  ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(INACTIVE_ACCESS_PROVIDER_A);
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
     Errors errors = verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), APPLICATION_JSON, 422).as(Errors.class);
     assertEquals(1, errors.getErrors().size());
-    assertEquals(POL_ACCESS_PROVIDER_IS_INACTIVE.getCode(), errors.getErrors().get(0).getCode());
+    assertEquals(POL_ACCESS_PROVIDER_IS_INACTIVE.getCode(), errors.getErrors().getFirst().getCode());
   }
 
   @Test
   void testUpdatePolineForOpenedOrderWithChangingCost() {
     logger.info("=== Test update poline for opened order with changed cost ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
     double newCost = 12.09d;
     reqData.getCost().setListUnitPriceElectronic(newCost);
-    reqData.getFundDistribution().get(0).setDistributionType(FundDistribution.DistributionType.AMOUNT);
-    reqData.getFundDistribution().get(0).setValue(newCost);
+    reqData.getFundDistribution().getFirst().setDistributionType(FundDistribution.DistributionType.AMOUNT);
+    reqData.getFundDistribution().getFirst().setValue(newCost);
 
     verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 204);
@@ -1203,17 +1199,17 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithInactiveExpenseClass() {
     logger.info("=== Test update poline for opened order with inactive expense class ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
-    reqData.getFundDistribution().get(0).setExpenseClassId(INACTIVE_EXPENSE_CLASS_ID);
+    reqData.getFundDistribution().getFirst().setExpenseClassId(INACTIVE_EXPENSE_CLASS_ID);
 
     Errors errors = verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData)
       .encode(), prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 400)
@@ -1227,18 +1223,18 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithChangingDistributionType() {
     logger.info("=== Test update poline for opened order with changed DistributionType ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
-    reqData.getFundDistribution().get(0).setDistributionType(FundDistribution.DistributionType.AMOUNT);
-    reqData.getFundDistribution().get(0).setValue(reqData.getCost().getPoLineEstimatedPrice());
+    reqData.getFundDistribution().getFirst().setDistributionType(FundDistribution.DistributionType.AMOUNT);
+    reqData.getFundDistribution().getFirst().setValue(reqData.getCost().getPoLineEstimatedPrice());
 
 
     verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
@@ -1249,13 +1245,13 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithChangingDFundistributionAndCost() {
     logger.info("=== Test update poline for opened order with changed DistributionType ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
     Cost cost = reqData.getCost();
@@ -1276,13 +1272,13 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithoutUpdatingEncumbrances() {
     logger.info("=== Test update poline. Fund distributions not changed ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
@@ -1292,9 +1288,9 @@ public class PurchaseOrderLinesApiTest {
       MockServer.getRqRsEntries(HttpMethod.POST, FINANCE_BATCH_TRANSACTIONS).isEmpty());
 
     // double check with updating status only (When only status updated via request from mod-invoices)
-    CompositePoLine updatedLine = getRqRsEntries(HttpMethod.PUT, PO_LINES_STORAGE).get(0).mapTo(CompositePoLine.class);
-    updatedLine.setPaymentStatus(CompositePoLine.PaymentStatus.FULLY_PAID);
-    updatedLine.getDetails().getProductIds().iterator().next().setQualifier(null);
+    PoLine updatedLine = getRqRsEntries(HttpMethod.PUT, PO_LINES_STORAGE).getFirst().mapTo(PoLine.class);
+    updatedLine.setPaymentStatus(PoLine.PaymentStatus.FULLY_PAID);
+    updatedLine.getDetails().getProductIds().getFirst().setQualifier(null);
 
     verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(updatedLine).encodePrettily(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 204);
@@ -1306,22 +1302,22 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithChangingOnlyLocation() {
     logger.info("=== Test update poline for opened order with changed location ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67e";
     reqData.setId(poLineId);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
     reqData.getEresource().setCreateInventory(INSTANCE_HOLDING_ITEM);
-    reqData.getLocations().get(0).setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
+    reqData.getLocations().getFirst().setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
     String newLocationId = "fcd64ce1-6995-48f0-840e-89ffa2288371";
-    reqData.getLocations().get(0).setLocationId(newLocationId);
+    reqData.getLocations().getFirst().setLocationId(newLocationId);
 
     Errors response = verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 400).as(Errors.class);
@@ -1339,21 +1335,21 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithChangingQuantity() {
     logger.info("=== Test update poline for opened order with changed quantity ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67e";
     reqData.setId(poLineId);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
     reqData.getEresource().setCreateInventory(INSTANCE_HOLDING_ITEM);
-    reqData.getLocations().get(0).setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
+    reqData.getLocations().getFirst().setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
-    reqData.getLocations().get(0).setQuantityElectronic(3);
+    reqData.getLocations().getFirst().setQuantityElectronic(3);
     reqData.getCost().setQuantityElectronic(3);
 
     Errors response = verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
@@ -1374,22 +1370,22 @@ public class PurchaseOrderLinesApiTest {
   void testUpdatePolineForOpenedOrderWithChangingQuantityAndCheckinItems() {
     logger.info("=== Test update poline for opened order with changed quantity and checkin items ===");
 
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67e";
     reqData.setId(poLineId);
     reqData.setCheckinItems(true);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
     reqData.getEresource().setCreateInventory(INSTANCE_HOLDING_ITEM);
-    reqData.getLocations().get(0).setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
+    reqData.getLocations().getFirst().setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
-    reqData.getLocations().get(0).setQuantityElectronic(3);
+    reqData.getLocations().getFirst().setQuantityElectronic(3);
     reqData.getCost().setQuantityElectronic(3);
 
     verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
@@ -1400,8 +1396,8 @@ public class PurchaseOrderLinesApiTest {
   void testShouldReleaseEncumbrancesAfterCancelledPoLine() {
     logger.info("=== Test release encumbrances after cancelled PoLine  ===");
 
-    CompositePoLine lineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(CompositePoLine.class);
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(CompositePoLine.class);
+    PoLine lineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(PoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(PoLine.class);
     reqData.setReceiptStatus(ReceiptStatus.CANCELLED);
     reqData.setPaymentStatus(PaymentStatus.CANCELLED);
 
@@ -1413,7 +1409,7 @@ public class PurchaseOrderLinesApiTest {
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, lineFromStorage);
     addMockEntry(FUNDS, fund);
@@ -1428,11 +1424,11 @@ public class PurchaseOrderLinesApiTest {
   void testShouldChangeItemStatusAfterCancelledPoLine() {
     logger.info("=== Test change item status to 'Order closed' after cancelled PoLine  ===");
 
-    CompositePoLine firstLineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(CompositePoLine.class);
+    PoLine firstLineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(PoLine.class);
     firstLineFromStorage.setReceiptStatus(ReceiptStatus.CANCELLED);
     firstLineFromStorage.setPaymentStatus(PaymentStatus.CANCELLED);
-    CompositePoLine secondLineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "cc189777-fd26-4ae8-b0e5-08abebb50b51").mapTo(CompositePoLine.class);
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "cc189777-fd26-4ae8-b0e5-08abebb50b51").mapTo(CompositePoLine.class);
+    PoLine secondLineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "cc189777-fd26-4ae8-b0e5-08abebb50b51").mapTo(PoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "cc189777-fd26-4ae8-b0e5-08abebb50b51").mapTo(PoLine.class);
     reqData.setReceiptStatus(ReceiptStatus.CANCELLED);
     reqData.setPaymentStatus(PaymentStatus.CANCELLED);
 
@@ -1444,7 +1440,7 @@ public class PurchaseOrderLinesApiTest {
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, firstLineFromStorage);
     addMockEntry(PO_LINES_STORAGE, secondLineFromStorage);
@@ -1460,10 +1456,10 @@ public class PurchaseOrderLinesApiTest {
   void testShouldUnreleasedEncumbrancesAfterUncancelledPoLine() {
     logger.info("=== Test unreleased encumbrances after uncancelled PoLine ===");
 
-    CompositePoLine lineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(CompositePoLine.class);
+    PoLine lineFromStorage = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(PoLine.class);
     lineFromStorage.setReceiptStatus(ReceiptStatus.CANCELLED);
     lineFromStorage.setPaymentStatus(PaymentStatus.CANCELLED);
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "740809a1-84ca-45d7-a7a8-accc21efd5bd").mapTo(PoLine.class);
     reqData.setReceiptStatus(ReceiptStatus.AWAITING_RECEIPT);
     reqData.setPaymentStatus(PaymentStatus.AWAITING_PAYMENT);
 
@@ -1475,7 +1471,7 @@ public class PurchaseOrderLinesApiTest {
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, lineFromStorage);
     addMockEntry(FUNDS, fund);
@@ -1486,7 +1482,7 @@ public class PurchaseOrderLinesApiTest {
 
   @Test
   void testUpdatePolineForOpenedOrderWithoutUpdatingItems() {
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67e";
     reqData.setId(poLineId);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
@@ -1496,13 +1492,13 @@ public class PurchaseOrderLinesApiTest {
     addMockEntry(PIECES_STORAGE, new Piece()
       .withFormat(Piece.Format.ELECTRONIC)
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
     int expQtyElectronic = 3;
-    reqData.getLocations().get(0).setQuantityElectronic(expQtyElectronic);
-    reqData.getLocations().get(0).setQuantity(expQtyElectronic);
+    reqData.getLocations().getFirst().setQuantityElectronic(expQtyElectronic);
+    reqData.getLocations().getFirst().setQuantity(expQtyElectronic);
     reqData.getCost().setQuantityElectronic(expQtyElectronic);
     Errors response = verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 400).as(Errors.class);
@@ -1521,23 +1517,23 @@ public class PurchaseOrderLinesApiTest {
 
   @Test
   void testUpdatePolineForOpenedOrderWithNewLocationWithoutUpdatingItems() {
-    CompositePoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(CompositePoLine.class);
+    PoLine reqData = getMockAsJson(COMP_PO_LINES_MOCK_DATA_PATH, "c2755a78-2f8d-47d0-a218-059a9b7391b4").mapTo(PoLine.class);
     String poLineId = "c0d08448-347b-418a-8c2f-5fb50248d67e";
     reqData.setId(poLineId);
     reqData.setPurchaseOrderId("9d56b621-202d-414b-9e7f-5fefe4422ab3");
     reqData.getEresource().setAccessProvider(ACTIVE_ACCESS_PROVIDER_B);
     reqData.getEresource().setCreateInventory(INSTANCE_HOLDING);
-    reqData.getLocations().get(0).setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
+    reqData.getLocations().getFirst().setLocationId("758258bc-ecc1-41b8-abca-f7b610822fff");
 
     addMockEntry(PIECES_STORAGE, new Piece()
       .withFormat(Piece.Format.ELECTRONIC)
       .withPoLineId(reqData.getId())
-      .withLocationId(reqData.getLocations().get(0).getLocationId()));
+      .withLocationId(reqData.getLocations().getFirst().getLocationId()));
 
     addMockEntry(PO_LINES_STORAGE, reqData);
 
     String newLocationId = "fcd64ce1-6995-48f0-840e-89ffa2288371";
-    reqData.getLocations().get(0).setLocationId(newLocationId);
+    reqData.getLocations().getFirst().setLocationId(newLocationId);
 
     Errors response = verifyPut(String.format(LINE_BY_ID_PATH, reqData.getId()), JsonObject.mapFrom(reqData).encode(),
       prepareHeaders(EXIST_CONFIG_X_OKAPI_TENANT_LIMIT_10, X_OKAPI_USER_ID), "", 400).as(Errors.class);
@@ -1604,7 +1600,7 @@ public class PurchaseOrderLinesApiTest {
 
     Response actual = verifyPatch(url, JsonObject.mapFrom(body).encode(), "", 404);
 
-    assertEquals(ID_DOES_NOT_EXIST, actual.as(Errors.class).getErrors().get(0).getMessage());
+    assertEquals(ID_DOES_NOT_EXIST, actual.as(Errors.class).getErrors().getFirst().getMessage());
   }
 
   @Test
@@ -1632,9 +1628,9 @@ public class PurchaseOrderLinesApiTest {
 
     Response actual = verifyPut(PO_LINE_VALIDATE_FUND_DISTRIBUTIONS_PATH, JsonObject.mapFrom(request).encode(), "", 422);
 
-    Error error = actual.as(Errors.class).getErrors().get(0);
+    Error error = actual.as(Errors.class).getErrors().getFirst();
     assertEquals("must not be null", error.getMessage());
-    assertEquals("cost.currency", error.getParameters().get(0).getKey());
+    assertEquals("cost.currency", error.getParameters().getFirst().getKey());
   }
 
   @Test
@@ -1650,10 +1646,10 @@ public class PurchaseOrderLinesApiTest {
 
     Response actual = verifyPut(PO_LINE_VALIDATE_FUND_DISTRIBUTIONS_PATH, JsonObject.mapFrom(request).encode(), "", 422);
 
-    Error error = actual.as(Errors.class).getErrors().get(0);
+    Error error = actual.as(Errors.class).getErrors().getFirst();
     assertEquals(ErrorCodes.INCORRECT_FUND_DISTRIBUTION_TOTAL.getDescription(), error.getMessage());
     assertEquals(ErrorCodes.INCORRECT_FUND_DISTRIBUTION_TOTAL.getCode(), error.getCode());
-    Parameter remainingAmountParam = error.getParameters().get(0);
+    Parameter remainingAmountParam = error.getParameters().getFirst();
     assertEquals(FundDistributionUtils.REMAINING_AMOUNT_FIELD, remainingAmountParam.getKey());
     assertEquals(0.01d, Double.parseDouble(remainingAmountParam.getValue()));
   }
@@ -1670,20 +1666,20 @@ public class PurchaseOrderLinesApiTest {
 
     Response actual = verifyPut(PO_LINE_VALIDATE_FUND_DISTRIBUTIONS_PATH, JsonObject.mapFrom(request).encode(), "", 422);
 
-    Error error = actual.as(Errors.class).getErrors().get(0);
+    Error error = actual.as(Errors.class).getErrors().getFirst();
     assertEquals(ErrorCodes.CANNOT_MIX_TYPES_FOR_ZERO_PRICE.getDescription(), error.getMessage());
     assertEquals(ErrorCodes.CANNOT_MIX_TYPES_FOR_ZERO_PRICE.getCode(), error.getCode());
   }
 
   @ParameterizedTest
-  @EnumSource(value = CompositePoLine.OrderFormat.class, names = {"PHYSICAL_RESOURCE", "OTHER"}, mode = EnumSource.Mode.INCLUDE)
-  void testPutPhysicalOrderLineByIdWhenSpecificElementIsPresentAndProtectedFieldsChanged(CompositePoLine.OrderFormat orderFormat) {
+  @EnumSource(value = PoLine.OrderFormat.class, names = {"PHYSICAL_RESOURCE", "OTHER"}, mode = EnumSource.Mode.INCLUDE)
+  void testPutPhysicalOrderLineByIdWhenSpecificElementIsPresentAndProtectedFieldsChanged(PoLine.OrderFormat orderFormat) {
     logger.info("=== Test PUT Order Line By Id - Protected fields changed ===");
 
     String lineId = "0009662b-8b80-4001-b704-ca10971f222d";
     JsonObject body = getMockAsJson(PO_LINES_MOCK_DATA_PATH, lineId);
     Object[] expected = new Object[]{ POLineFieldNames.ACQUISITION_METHOD.getFieldName()};
-    if (CompositePoLine.OrderFormat.ELECTRONIC_RESOURCE == orderFormat) {
+    if (PoLine.OrderFormat.ELECTRONIC_RESOURCE == orderFormat) {
       body.remove(ERESOURCE);
     }
 
@@ -1694,7 +1690,7 @@ public class PurchaseOrderLinesApiTest {
 
     assertThat(errors.getErrors(), hasSize(1));
 
-    Error error = errors.getErrors().get(0);
+    Error error = errors.getErrors().getFirst();
     assertThat(error.getCode(), equalTo(PROHIBITED_FIELD_CHANGING.getCode()));
 
     Object[] failedFieldNames = getModifiedProtectedFields(error);
@@ -1711,8 +1707,8 @@ public class PurchaseOrderLinesApiTest {
   }
 
   @ParameterizedTest
-  @EnumSource(value = CompositePoLine.OrderFormat.class, names = {"ELECTRONIC_RESOURCE"}, mode = EnumSource.Mode.INCLUDE)
-  void testPutElecOrderLineByIdWhenSpecificElementIsPresentAndProtectedFieldsChanged(CompositePoLine.OrderFormat orderFormat) {
+  @EnumSource(value = PoLine.OrderFormat.class, names = {"ELECTRONIC_RESOURCE"}, mode = EnumSource.Mode.INCLUDE)
+  void testPutElecOrderLineByIdWhenSpecificElementIsPresentAndProtectedFieldsChanged() {
     logger.info("=== Test PUT Order Line By Id - Protected fields changed ===");
 
     String lineId = "0009662b-8b80-4001-b704-ca10971f222d";
@@ -1727,7 +1723,7 @@ public class PurchaseOrderLinesApiTest {
 
     assertThat(errors.getErrors(), hasSize(1));
 
-    Error error = errors.getErrors().get(0);
+    Error error = errors.getErrors().getFirst();
     assertThat(error.getCode(), equalTo(PROHIBITED_FIELD_CHANGING.getCode()));
 
     Object[] failedFieldNames = getModifiedProtectedFields(error);
@@ -1744,8 +1740,8 @@ public class PurchaseOrderLinesApiTest {
   }
 
   @ParameterizedTest
-  @EnumSource(value = CompositePoLine.OrderFormat.class, names = {"P_E_MIX"}, mode = EnumSource.Mode.INCLUDE)
-  void testPutMixedOrderLineByIdWhenSpecificElementIsPresentAndProtectedFieldsChanged(CompositePoLine.OrderFormat orderFormat) {
+  @EnumSource(value = PoLine.OrderFormat.class, names = {"P_E_MIX"}, mode = EnumSource.Mode.INCLUDE)
+  void testPutMixedOrderLineByIdWhenSpecificElementIsPresentAndProtectedFieldsChanged() {
     logger.info("=== Test PUT Order Line By Id - Protected fields changed ===");
 
     String lineId = "0009662b-8b80-4001-b704-ca10971f222d";
@@ -1759,7 +1755,7 @@ public class PurchaseOrderLinesApiTest {
 
     assertThat(errors.getErrors(), hasSize(1));
 
-    Error error = errors.getErrors().get(0);
+    Error error = errors.getErrors().getFirst();
     assertThat(error.getCode(), equalTo(PROHIBITED_FIELD_CHANGING.getCode()));
 
     Object[] failedFieldNames = getModifiedProtectedFields(error);
@@ -1775,10 +1771,10 @@ public class PurchaseOrderLinesApiTest {
     HandlersTestHelper.verifyOrderStatusUpdateEvent(0);
   }
 
-  private String getPoLineWithMinContentAndIds(String lineId, String orderId) throws IOException {
-    CompositePoLine poLine = new JsonObject(getMockData(PO_LINE_MIN_CONTENT_PATH)).mapTo(CompositePoLine.class);
+  private String getPoLineWithMinContentAndIds(String lineId) throws IOException {
+    PoLine poLine = new JsonObject(getMockData(PO_LINE_MIN_CONTENT_PATH)).mapTo(PoLine.class);
     poLine.setId(lineId);
-    poLine.setPurchaseOrderId(orderId);
+    poLine.setPurchaseOrderId(org.folio.TestConstants.PO_ID_PENDING_STATUS_WITH_PO_LINES);
     return JsonObject.mapFrom(poLine).encode();
   }
 
